# backend

./: .gitignore  .pre-commit-config.yaml  .sops.yaml  Makefile  README.md  db.sqlite3  main.py  makefile.mk  team-keys.asc
.github/workflows/: check-services.yml  deploy-services.yml  detect-changed-services.yml  pr-branch-restriction.yml
helm/: CHECKLIST.md  README.md
helm/.base-service/: Chart.yaml  values.yaml
helm/.base-service/templates/: configmap.yaml  deployment.yaml  hpa.yaml  migration.yaml  secret.yaml  service.yaml
helm/cluster-issuer/: Chart.yaml  README.md  secrets.enc.yaml  values.yaml
helm/cluster-issuer/templates/: cloudflare-secret.yaml  cluster-issuer.yaml
helm/envoy-gateway/: Chart.yaml  values.yaml
helm/envoy-gateway/files/clusters/: auth_service.yaml  docs_service.yaml  work_service.yaml
helm/envoy-gateway/files/routes/: auth.yaml  docs.yaml  works.yaml
helm/envoy-gateway/templates/: certificate.yaml  configmap.yaml  cronjob-tls-rbac.yaml  cronjob-tls.yaml  deployment.yaml  service.yaml
helm/pgbouncer/: Chart.yaml  secrets.enc.yaml  values.yaml
helm/pgbouncer/templates/: _helpers.tpl  database-init.yaml  secret.yaml  userlist-secret.yaml
helm/postgresql/: Chart.yaml  secrets.enc.yaml  values.yaml
helm/postgresql/templates/: secret.yaml
scripts/: get_image_tag.sh  run_tests.py
services/auth/: .env.example  alembic.ini  pyproject.toml
services/auth/alembic/: env.py
services/auth/alembic/versions/: 0001_add_account_model.py  0002_add_oauth_account_model.py
services/auth/docker/: Dockerfile  docker-compose.testing.yml  docker-compose.yml
services/auth/helm/: Chart.yaml  secrets.enc.yaml  values.yaml
services/auth/src/: main.py
services/auth/src/api/: __init__.py  deps.py  limits.py  routers.py
services/auth/src/api/routes/: auth.py  oauth2.py  token.py
services/auth/src/core/: exceptions.py  security.py
services/auth/src/core/clients/: redis.py
services/auth/src/core/configs/: base.py  jwt.py  oauth2.py  postgres.py  redis.py
services/auth/src/core/health/: checks.py
services/auth/src/core/logs/: config.py
services/auth/src/db/: session.py
services/auth/src/enums/: __init__.py  oauth.py  platforms.py  token.py
services/auth/src/models/: __init__.py  account.py  oauth_account.py
services/auth/src/schemas/: __init__.py  credentials.py  oauth2.py  statuses.py  token.py
services/auth/src/services/: auth.py  oauth2.py  token.py
services/auth/tests/services/: conftest.py  test_token.py
services/docs/: .dockerignore  pyproject.toml
services/docs/docker/: Dockerfile  docker-compose.testing.yml  docker-compose.yml
services/docs/helm/: Chart.yaml  values.yaml
services/docs/src/: main.py
services/docs/src/api/: docs.py
services/docs/src/core/: exceptions.py  security.py
services/docs/src/core/configs/: base.py
services/docs/src/schemas/: service.py
services/docs/tests/: test_stub.py
